styles/Home.module.scss
@import '../utils/_variables.scss';

.banner {
    color: $color-2;
    margin: 0 auto;
    text-align: center;
    display: block;
    letter-spacing: 0.2rem;
    font-family: inherit;
    span {
        color: $color-3;
        margin-right: 0.2rem;
        font-family: inherit;
    } 
}
.skills {
  background-color: $color-2;
  padding: auto 12rem;
  text-align: center;
  height: 75vh;
  h3 {
    display: inline;
    padding: 0 0 0.5rem 0;
    border-bottom: 1px solid $color-3;
  }
}

.about {
  color: $color-1;
  height: 75vh;
  padding: 1rem;
  @media screen and (min-width: $md-max) {
    padding-top: 6rem;
  }
  overflow: hidden;
  p {
    margin: 1rem auto;
  }

}

.lander, .about, .skills {
  @media only screen and (max-width: $md-max) {
    scroll-snap-align: center;
  }
}

.lander {
    font-size: 3rem;
    padding-top: 3rem;
    letter-spacing: 0.1rem;
    font-weight: 100;
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;

    div {
      text-align: center;
      margin: 0 auto;
      width: 90vw;
      font-family: 'Amatic SC', 'Oswald', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
      p {
        font-family: inherit;
        font-size: 1.75rem;
        font-weight: 100;
      }
    }
   
    @media only screen and (max-width:$sm-max) {
      font-size: 2rem;
    }
    p {
      &:nth-child(2) {
        margin-top: 1rem;
      }
    }
  }

